feat: correcao task 2 projeto collection OPC